Firefox Fix Scrollbar

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,10 @@
+
+.hide-scrollbar
+{
+    -ms-overflow-style: none; /* IE 11 */
+    scrollbar-width: none; /* Firefox 64 */
+}
+
 body {
     background-color: #1a1a1a;
     color: #f5f5f5;
